07-k8s/workload/04-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: my-ns
  labels:
    app: example
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/env: development
      app.kubernetes.io/part-of: monitoring
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-exporter
        app.kubernetes.io/env: development
        app.kubernetes.io/part-of: monitoring
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter
