07-k8s/workload/08-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: my-ns
  labels:
    app: nginx
spec:
  type: ClusterIP # NodePort, LoadBalancer, ExternalName
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: my-ns
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx


# kubectl get service -n my-ns
# kubectl get deployment -n my-ns
# kubectl get pods -n my-ns -o wide
# kubectl get ep -n my-ns

# service name pattern

service_name.namespace.svc.cluster.local

---
apiVersion: v1
kind: Pod
metadata:
  namespace: my-ns
  name: alpine
  labels:
    app.kubernetes.io/product: alpine
spec:
  containers:
    - name: alpine
      image: alpine
      command: ["/bin/sh", "-c", "sleep 5000"]
      ports:
        - containerPort: 80
---
